# DAW

./: .gitignore  CMakeLists.txt  Daw.code-workspace  HARDENING_PLAN_REVISED.tmp.md  README.md  phase2step3.py  pyproject.toml  requirements.txt
DAW/: README.txt
apps/daw_gui/: AppState.h  CMakeLists.txt  _draw_extract.txt  app_state_api.cpp  draw.cpp  draw.h  main.cpp  state.h
apps/daw_gui/ai/: automix_bridge.cpp  automix_bridge.h
apps/daw_gui/audio/: AudioRuntimeState.h  DeviceFacade.cpp  DeviceFacade.h  device_common.cpp  device_common.h  device_mme.cpp  device_mme.h  device_wasapi.cpp  device_wasapi.h  engine.cpp  engine.h  engine_utils.cpp  engine_utils.h  import.cpp  mix_snapshot_builder.cpp  mix_snapshot_builder.h  orchestration.cpp  rt_alloc_trace.cpp  rt_alloc_trace.h  transport_adapter.cpp  transport_adapter.h  transport_control.cpp
apps/daw_gui/core/: CoreState.h  ProjectData.h  automation.cpp  automation.h  automation_types.h  internal_app_services.cpp  internal_app_services.h  state.h  timeline.cpp  timeline.h  timeline_edit.cpp  timeline_edit.h
apps/daw_gui/dsp/: chain.cpp  chain.h  insert_types.h
apps/daw_gui/engine/: EngineFacade.cpp  EngineFacade.h
apps/daw_gui/include/: daw_audio.h  daw_automation.h  daw_project.h  daw_sdk.h  daw_timeline.h
apps/daw_gui/io/: project_io.cpp  project_io.h  wav_io.cpp  wav_io.h
apps/daw_gui/threading/: thread_identity.cpp  thread_identity.h
apps/daw_gui/ui/: UiRuntimeState.h  dialogs.cpp  dialogs.h  dock.cpp  dock.h  dock_drop.cpp  dock_drop.h  dock_persist.cpp  dock_persist.h  dpi.h  draw.cpp  draw.h  floating.cpp  floating.h  layout.cpp  layout.h  menu_build.cpp  menu_build.h  panel.cpp  panel.h  repaint.cpp  repaint.h
apps/daw_gui/ui/draw/: chrome.cpp  dock_chrome.cpp  draw_internal.h  inspector.cpp  mixer_strips.cpp  timeline.cpp
apps/daw_gui/ui/wndproc/: command.cpp  command.h  keys.cpp  keys.h  lbutton.cpp  lbutton.h  lbuttondown.cpp  lbuttondown.h  mousemove.cpp  mousemove.h  paint.cpp  paint.h  rbutton.cpp  rbutton.h  timer.cpp  timer.h  wheel.cpp  wheel.h
apps/daw_host/: CMakeLists.txt  main.cpp
docs/: ARCHITECTURE.md  ARCHITECTURE_MAP_CURRENT_PHASE7.md  DEPENDENCY_MAP.md  GOALS.md  ROADMAP.md
examples/: Readme.txt
libs/base/: CMakeLists.txt
libs/base/include/base/: assert.h  result.h
libs/base/tests/: CMakeLists.txt  test_result.cpp
libs/core/: CMakeLists.txt
libs/core/include/core/: audio_clip.h  automation_curve.h  project_data.h  timeline_edit_ops.h  timeline_math.h  track_audibility.h
libs/core/src/: automation_curve.cpp  timeline_edit.cpp  timeline_math.cpp  track_audibility.cpp
libs/core/tests/: CMakeLists.txt  test_audio_clip.cpp  test_automation_curve.cpp  test_project_data.cpp  test_timeline_edit.cpp  test_timeline_math.cpp  test_track_audibility.cpp
libs/dsp/: CMakeLists.txt
libs/dsp/include/dsp/: chain.h  insert_types.h  metronome.h  mix.h  resample.h  util.h
libs/dsp/src/: chain.cpp  metronome.cpp  mix.cpp  resample.cpp  util.cpp
libs/dsp/tests/: CMakeLists.txt  test_chain.cpp  test_input_monitor.cpp  test_metronome.cpp  test_mix.cpp  test_mix_add.cpp  test_mix_diff.cpp  test_resample.cpp
libs/engine/: CMakeLists.txt
libs/engine/include/engine/: clip_reader.h  clip_render.h  mix_pipeline.h  mix_snapshot.h  timeline_layout.h
libs/engine/src/: clip_reader.cpp  clip_render.cpp  timeline_layout.cpp
libs/engine/tests/: CMakeLists.txt  test_clip_reader.cpp  test_clip_render.cpp  test_mix_pipeline.cpp  test_mix_snapshot.cpp  test_timeline_layout.cpp
libs/io/: CMakeLists.txt
libs/io/include/io/: wav.h
libs/io/src/: wav.cpp
libs/io/tests/: CMakeLists.txt  test_wav.cpp
libs/platform/: CMakeLists.txt
libs/platform/include/platform/: dpi.h
libs/platform/src/: dpi.cpp
libs/services/: CMakeLists.txt
libs/services/include/services/: transport_fsm.h
libs/services/src/: transport_fsm.cpp
libs/services/tests/: CMakeLists.txt  test_transport_fsm.cpp
libs/vm/: CMakeLists.txt
libs/vm/include/vm/: timeline_view.h  timeline_zoom.h
libs/vm/src/: timeline_view.cpp  timeline_zoom.cpp
libs/vm/tests/: CMakeLists.txt  test_timeline_view.cpp  test_timeline_zoom.cpp
src/daw_ai/: __init__.py  auto_mix.py  cli.py  dsp.py  effects.py  features.py  io.py  mastering.py  mix_readiness.py  models.py  report.py  rules.py  vocal_check.py
src/daw_ai/daw/: __init__.py  engine.py  project.py  timeline.py  transport.py
tools/: _rewrite_repaint.ps1  _rewrite_ui_subs.ps1  layer_lint.ps1
